tests/baselines/reference/emitExtensionRejectMixedResolveTSFile.errors.txt
tests/cases/compiler/1.ts(1,17): error TS2691: An import path cannot end with a '.ts' extension. Consider importing './0' instead.


==== tests/cases/compiler/0.ts (0 errors) ====
    // For the deno case
    export default 0
    
==== tests/cases/compiler/1.ts (1 errors) ====
    import num from './0.ts'
                    ~~~~~~~~
!!! error TS2691: An import path cannot end with a '.ts' extension. Consider importing './0' instead.
    import num2 from './2.tsx'
    num + num2
    
==== tests/cases/compiler/2.tsx (0 errors) ====
    export default 1
    